# Wine-Journal

./: .gitignore  .replit  main.py  main_old.py  pyproject.toml  test.py  test_bs_vivino.py  test_bs_wine_searcher.py  test_tavily.py  vivino.json  vivino_api_wine.py  vivino_wine.json  wine_searcher.json  winejournal.py
.streamlit/: secrets.toml
