[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-openai>=0.2.12",
    "langgraph>=0.2.59",
    "toml>=0.10.2",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
]
